"Refactor de backend del modulo geografía y los catalogos de marca, modelo, servicios y tipos de documentos"